--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,19 @@
 {
 	"compilerOptions": {
 		"allowJs": true,
-		"declaration": false,
-		// "esModuleInterop": true,
+		"declaration": true,
 		"module": "commonjs",
 		"noImplicitAny": true,
 		"noImplicitReturns": true,
 		"noImplicitThis": true,
 		"noUnusedLocals": true,
-		"outDir": "dist/lib",
+		"outDir": "dist",
 		"strict": true,
 		"target": "es6",
 	},
+	"include": [
+		"src",
+	],
 	"exclude": [
 		"node_modules",
 		"dist",
