--- a/babel/package.json
+++ b/babel/package.json
@@ -11,10 +11,10 @@
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.0",
     "@babel/preset-typescript": "^7.9.0",
-    "@types/babel-core": "^6.25.6",
+    "@types/babel__core": "^7.1.7",
     "@types/jest": "^25.2.1",
     "@types/node": "^13.11.0",
-    "babel-plugin-tester": "^9.0.0",
+    "babel-plugin-tester": "^9.0.1",
     "jest": "^25.2.7",
     "ts-jest": "^25.3.1",
     "typescript": "^3.8.3"
