--- a/babel/package.json
+++ b/babel/package.json
@@ -1,10 +1,27 @@
 {
   "name": "babel-plugin-test-internal",
   "version": "0.0.2",
-  "main": "index.js",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dgellow/plugin-test-internal.git"
+  },
+  "keywords": [
+    "babel-plugin"
+  ],
+  "author": "Samuel El-Borai <samuel.elborai@gmail.com>",
+  "bugs": {
+    "url": "https://github.com/dgellow/plugin-test-internal/issues"
+  },
+  "homepage": "https://github.com/dgellow/plugin-test-internal",
+  "type": "module",
+  "main": "./dist/index.js",
+  "exports": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "tsc",
+    "clean": "tsc --build --clean",
+    "build": "yarn clean && tsc",
+    "prepublish": "yarn build",
     "test": "jest"
   },
   "devDependencies": {
