--- a/typescript/tsconfig.json
+++ b/typescript/tsconfig.json
@@ -1,19 +1,20 @@
 {
 	"compilerOptions": {
-		"allowJs": true,
+		"strict": true,
+		"module": "ES6",
+		"target": "ES6",
 		"declaration": true,
-		"module": "commonjs",
 		"noImplicitAny": true,
 		"noImplicitReturns": true,
 		"noImplicitThis": true,
 		"noUnusedLocals": true,
+		"esModuleInterop": true,
+		"moduleResolution": "node",
 		"outDir": "dist",
-		"strict": true,
-		"target": "es6",
 	},
 	"include": [
 		"index.ts",
-		"test",
+		"test/*.test.ts",
 	],
 	"exclude": [
 		"node_modules",
